smbd: Cancel pending notifies if the directory goes away

BUG: https://bugzilla.samba.org/show_bug.cgi?id=11257

Signed-off-by: Volker Lendecke <vl@samba.org>
Reviewed-by: Jeremy Allison <jra@samba.org>
(cherry picked from commit 50a1247927cb68303701a11517811deda10364f7)